@@ -1,6 +1,8 @@
 Revision history for Perl extension Types::Git.
 
 {{$NEXT}}
+- Add the GitSHA, GitLooseRef, GitBranchRef, GitTagRef, GitObject,
+  and GitRevision types.
 
 0.01      2014-11-16
  - First release.
